Fix mobile home layout: move balloon counters to top-right, raise Blue above footer, prevent horizontal scroll

--- a/components/blue-scene/BlueScene.module.css
+++ b/components/blue-scene/BlueScene.module.css
@@ -343,7 +343,17 @@
 
   .blueWrap {
     width: min(60%, 300px);
+    bottom: 72px;
   }
 
+  .footerCounters {
+    position: absolute;
+    top: 52px;
+    right: 12px;
+    z-index: 5;
+  }
 
+  .sceneFooter {
+    padding-right: 12px;
+  }
 }
